--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -240,8 +240,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-r1of2&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -274,8 +274,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-r1of3&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -308,8 +308,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-r1of4&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -342,8 +342,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-l1of2&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -376,8 +376,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-l1of3&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -410,8 +410,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-l1of4&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body&quot;&gt;
 		{$parts|box}
@@ -445,8 +445,8 @@
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
 	&lt;div class=&quot;float_media-l1of4&quot;&gt;
-		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_media-caption&quot;&gt;{$text}&lt;/p&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;{$string}&lt;/p&gt;
 	&lt;/div&gt;
 	&lt;div class=&quot;float_media-body_rect&quot;&gt;
 		{$parts|box}
@@ -482,16 +482,16 @@ UTODO: ガイドラインを提示すべき。
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit thumb_list&quot;&gt;
 	&lt;ul&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$href}&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;img src=&quot;{$image}&quot; alt=&quot;{$text}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$text}&lt;/span&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/a&gt;&lt;/div&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;div class=&quot;thumb_list-pad&quot;&gt;&lt;img src=&quot;{$string}&quot; alt=&quot;{$string}&quot; /&gt;&lt;span class=&quot;thumb_list-caption&quot;&gt;{$string}&lt;/span&gt;&lt;/div&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;&lt;!-- /.thumb_list --&gt;
 </textarea></div>
@@ -521,15 +521,15 @@ UTODO: ガイドラインを提示すべき。
 	&lt;ul&gt;
 		&lt;li class=&quot;pager-first&quot;&gt;&lt;span&gt;&amp;lt;&amp;lt;最初&lt;/span&gt;&lt;/li&gt;
 		&lt;li class=&quot;pager-prev&quot;&gt;&lt;span&gt;&amp;lt;前へ&lt;/span&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;span class=&quot;current&quot;&gt;{$int}&lt;/span&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;{$href}&quot;&gt;{$int}&lt;/a&gt;&lt;/li&gt;
-		&lt;li class=&quot;pager-next&quot;&gt;&lt;a href=&quot;{$int}&quot;&gt;次へ&amp;gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li class=&quot;pager-last&quot;&gt;&lt;a href=&quot;{$int}&quot;&gt;最後&amp;gt;&amp;gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;span class=&quot;current&quot;&gt;{$string}&lt;/span&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;{$string}&quot;&gt;{$string}&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;pager-next&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;次へ&amp;gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;pager-last&quot;&gt;&lt;a href=&quot;{$string}&quot;&gt;最後&amp;gt;&amp;gt;&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;&lt;!-- /.pager --&gt;
 </textarea></div>
@@ -613,10 +613,10 @@ UTODO: ガイドラインを提示すべき。
 
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit form_error_box&quot;&gt;
-	&lt;p&gt;{$text}&lt;/p&gt;
+	&lt;p&gt;{$string}&lt;/p&gt;
 	&lt;ul&gt;
-		&lt;li&gt;&lt;a href=&quot;#{$anchor}&quot;&gt;{$text}&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;{$text}&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;#{$string}&quot;&gt;{$parts}&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;{$parts}&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;&lt;!-- /.form_error_box --&gt;
 </textarea></div>
