--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -7,12 +7,25 @@
 	print( $px->theme()->autoindex() );
 ?>
 
+<h2>ロール(役割)の定義</h2>
+<p>
+	このドキュメントでは、2種類のロール(役割)が登場します。<br />
+</p>
+<dl>
+	<dt>設計者</dt>
+		<dd>設計者は、ウェブサイト全体の構造を設計する役割を担います。多くの場合は、1人〜3人程度で構成される少人数の役割です。制作者へ制作の手順やコーディング規則、ドキュメントモジュール仕様などについて指示し、サイト全体のクオリティを集中的に管理します。役割の呼称は設計者ですが、コンテンツエリア外の領域については設計者が制作を担当します。</dd>
+	<dt>制作者</dt>
+		<dd>制作者は、コンテンツ(ページ)個別の制作を行います。サイトの規模にもよりますが、通常は設計者に対して人数は多く、5人前後から、大規模なサイトでは数十人規模になることもあります。</dd>
+</dl>
+
+
+
 <h2>設計方針</h2>
 <p>
 	ドキュメントモジュールおよびコーディング規則は、次の方針に基づいて設計されます。<br />
 </p>
 <ul>
-	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、<strong>管理者が全体を効率よく管理できることを主目的として設計する</strong>。</li>
+	<li>少数(多くの場合1人)の設計者と、大勢の制作者との間の約束事であり、<strong>設計者が全体を効率よく管理できることを主目的として設計する</strong>。</li>
 	<li><strong>学習しやすさを重視する</strong>。可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
 	<li>なるべく<strong>ドキュメントの分量を圧縮できるように設計する</strong>。初めてドキュメントを読む人に負担をかけないよう配慮する。また、必要以上の規則を設けることは、個々人の作業効率を下げてしまう原因となる。</li>
 </ul>
@@ -86,7 +99,7 @@
 
 <h3>接頭辞 cont について</h3>
 <p>
-	接頭辞 cont は、テーマの管理者とコンテンツ制作者の名前領域を分ける目的で、コンテンツ独自のモジュールに対してつける予約語です。<br />
+	接頭辞 cont は、設計者と制作者の名前領域を分ける目的で、コンテンツ独自のモジュールに対してつける予約語です。<br />
 </p>
 <p>
 	<span class="cont_exam">
@@ -109,13 +122,13 @@
 <h2>共通ドキュメントモジュール</h2>
 
 <p>
-	ドキュメントモジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
+	ドキュメントモジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=設計者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
 </p>
 <p>
-	ここで定義されるドキュメントモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
+	ここで定義されるドキュメントモジュールは、サイト全体の管理者(=設計者)により、将来の環境や要件の変化を想定して設計されたものであり、制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
 </p>
 <p>
-	コンテンツ制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
+	制作者は、ここに定義されていないドキュメントモジュールを独自に開発することができます(独自ドキュメントモジュール設計規則については<a href="#cont_contents_custom_modules">コンテンツ独自ドキュメントモジュールの定義</a>を参照)が、これは通常推奨されません。独自ドキュメントモジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、設計者によって設計、提供されたドキュメントモジュールのみを使ってコンテンツを構築するようにしてください。<br />
 </p>
 
 <h3>ドキュメントモジュールの4つの分類</h3>
@@ -163,7 +176,7 @@
 </ul>
 
 <p>
-	テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマ管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、サブモジュールも含めて、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。<br />
+	テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずは設計者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、サブモジュールも含めて、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。<br />
 </p>
 
 <p>例:colsを独自CSSとして定義する場合</p>
