ドキュメントモジュールのモジュール名表記を厳密にした。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -246,7 +246,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>注釈リスト .notes</h3>
+<h3>注釈リスト ul.notes</h3>
 
 <ul class="notes">
 	<li class="notes-li">※リスト内容</li>
@@ -269,7 +269,7 @@
 </div><!-- /.unit -->
 
 
-<h3>リストマークがないリスト .nomark</h3>
+<h3>リストマークがないリスト ul.nomark</h3>
 <ul class="nomark">
 	<li class="nomark-li">リスト内容</li>
 	<li class="nomark-li">リスト内容</li>
@@ -365,7 +365,7 @@
 </div><!-- /.unit -->
 
 
-<h3>注釈定義・説明リスト .notes</h3>
+<h3>注釈定義・説明リスト dl.notes</h3>
 
 <dl class="notes">
 	<dt class="notes-dt">※1 語句</dt>
