ドキュメントモジュールに .notes を追加。インラインで使える。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -216,6 +216,13 @@
 </textarea></div>
 </div><!-- /.unit -->
 
+<h3>注釈表示 .notes</h3>
+<p><span class="notes">この文言は注釈表示です。</span></p>
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;p&gt;&lt;span class=&quot;notes&quot;&gt;この文言は注釈表示です。&lt;/span&gt;&lt;/p&gt;
+</textarea></div>
+</div>
+
 
 <h2>リスト</h2>
 
