ボックスモジュールのディレクトリ名を boxes に変更。
- 他のが全部複数系だったので。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -141,7 +141,7 @@
 		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
 	<dt><a href="./statics/">スタティックモジュール</a></dt>
 		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
-	<dt><a href="./box/">ボックスモジュール</a></dt>
+	<dt><a href="./boxes/">ボックスモジュール</a></dt>
 		<dd>ボックスモジュールは、箱型に囲われたビジュアルスタイルを持ち、前後の流れから独立した文脈に用います。ユニットモジュールに内包されることができ、ユニットモジュールを内包することもできる特殊なモジュール群です。</dd>
 </dl>
 
