--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,45 +1,23 @@
-<?php ob_start(); ?>
-<!-- このソースは、テーマのキャビネット "head" に送られます。 -->
-<style type="text/css">
-	/*
-		コンテンツ独自のローカルCSSはここに実装します。
-	*/
-</style>
-<!--
-または、次のように、外部のCSSを読み込むこともできます。
-- - -
-<link rel="stylesheet" href="./index.files/contents.css" type="text/css" />
--->
-<?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
-
 
 <h2>Pickles Framework へようこそ！</h2>
 <p>
 	これは、Pickles Framework のトップページです。<br />
 </p>
 
-<h2>デモファイル</h2>
+<h2>コーディング規則 と ドキュメントモジュール</h2>
 <p>
-	次のファイルは、デモ用のサンプルやテストコードを格納しています。制作を始めるにあたり、削除してください。<br />
+	Pickles Framework 標準のコーディング規則およびドキュメントモジュール定義は、次のページを参照してください。<br />
 </p>
 <ul>
-	<li>./_docs/test/*</li>
-	<li>./_PX/sitemaps/_docs_test.csv</li>
+	<li><a href="./_docs/modules/">ドキュメントモジュール</a></li>
 </ul>
+
 <p>
-	次のファイルは、Pickles Framework 標準のコーディング規則、CSSモジュールの定義とテンプレート集、有用な機能やAPIの一覧、実装ルールなどのドキュメントを提供しています。コーディング規則やCSS実装の確認用として利用できますが、不要な場合削除しても大丈夫です。<br />
+	これらのドキュメントは、次のファイルに記述されています。コーディング規則やCSS実装の確認用として利用できますが、不要な場合削除しても大丈夫です。<br />
 </p>
 <ul>
 	<li>./_docs/*</li>
 	<li>./_PX/sitemaps/_docs.csv</li>
-</ul>
-
-<h2>コーディング規則</h2>
-<p>
-	Pickles Framework のドキュメントを参照するには、次のページを参照してください。コーディング規則やCSSモジュール定義などが含まれています。<br />
-</p>
-<ul>
-	<li><a href="./_docs/modules/">Pickles Framework ドキュメント</a></li>
 </ul>
 
 
