$theme->mk_link() で、リンク先ページの layout が popup だった場合に別窓のリンクを生成するが、 popup で始まるもの全てで別窓にするように挙動を変更した。

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -48,25 +48,26 @@
 <?php /*
 ↓ ここからの記述は、ローカルナビゲーションの自動生成ロジックです。
 */ ?>
-<?php if( strlen( $page_info['id'] ) ){ ?>
-<?php $parent_page_info = $px->site()->get_page_info( $px->site()->get_parent() ); ?>
-<div><?php print '<a href="'.t::h($px->theme()->href($parent_page_info['path'])).'">'.t::h( $parent_page_info['title_label'] ).'</a>'; ?></div>
+<?php if( $px->site()->get_page_info($px->req()->get_request_file_path(),'id') ){ ?>
+<div><?php print $px->theme()->mk_link($px->site()->get_parent($px->req()->get_request_file_path())); ?></div>
 <?php } ?>
+
 <?php
 	$local_bros_page_info = $px->site()->get_bros();
 ?>
+
 <?php if( count($local_bros_page_info) ){ ?>
 <ul>
 <?php foreach( $local_bros_page_info as $local_page_id ){ ?>
 <?php $local_page_info = $px->site()->get_page_info($local_page_id); ?>
-<li><?php print '<a href="'.t::h( $px->theme()->href($local_page_info['path']) ).'"'.($local_page_info['id']==$page_info['id']?' class="current"':'').'>'.t::h($local_page_info['title_label']).'</a>'; ?>
+<li><?php print $px->theme()->mk_link($local_page_info['path']); ?>
 <?php if( $px->site()->is_page_in_breadcrumb( $local_page_info['id'] ) ){ ?>
 <?php $local_children = $px->site()->get_children( $local_page_info['id'] ); ?>
 <?php if( count($local_children) ){ ?>
 <ul>
 <?php foreach( $local_children as $local_child_page_id ){ ?>
 <?php $local_child_page_info = $px->site()->get_page_info($local_child_page_id); ?>
-<li><?php print '<a href="'.t::h( $px->theme()->href($local_child_page_info['path']) ).'">'.t::h($local_child_page_info['title_label']).'</a>'; ?></li>
+<li><?php print $px->theme()->mk_link($local_child_page_info['path']); ?></li>
 <?php }//foreach ?>
 </ul>
 <?php }//if ?>
