--- a/htdocs/_PX/themes/default/popup.html
+++ b/htdocs/_PX/themes/default/popup.html
@@ -12,6 +12,7 @@
 		<title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 		<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
 		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
+		<meta name="viewport" content="width=device-width" />
 		<script src="<?php print t::h($px->theme()->href('/common/js/jquery-1.10.1.min.js')); ?>" type="text/javascript"></script>
 <?php
 	print $px->ssi($px->theme()->href('/common/inc/common_setup.inc'));
@@ -27,13 +28,16 @@
 	</head>
 	<body>
 		<div class="theme_outline" id="page_top">
-			<div class="theme_header">
-				<div class="theme_logo"><?php print t::h($px->get_conf('project.name')); ?></div>
-			</div><!-- /.theme_header -->
+			<header>
+				<div class="theme_logo"><span><?php print t::h($px->get_conf('project.name')); ?></span></div>
+			</header>
 			<div class="theme_middle">
 				<div class="theme_column1">
-					<h1><?php print t::text2html( $page_info['title_h1'] ); ?></h1>
-					<div id="content" class="contents">
+					<div class="theme_column1-header">
+						<h1><?php print t::text2html( $page_info['title_h1'] ); ?></h1>
+					</div>
+					<div class="theme_column1-content">
+						<div id="content" class="contents">
 
 <?php
 	//↓コンテンツから受け取った
@@ -41,15 +45,16 @@
 	print $px->theme()->pull_content();
 ?>
 
-					</div><!-- /#content -->
+						</div><!-- /#content -->
+					</div>
 				</div><!-- /.theme_column1 -->
 				<div class="theme_column2">
 				</div><!-- /.theme_column2 -->
 			</div><!-- /.middle -->
-			<div class="theme_footer">
-				<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
-				<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
-			</div><!-- /.footer -->
+			<footer>
+				<div class="theme_foot_back2top"><a href="#page_top" class="up">ページの先頭へ戻る</a></div>
+				<div class="theme_foot_close"><a href="javascript:window.close();">閉じる</a></div>
+			</footer>
 		</div><!-- /.outline -->
 	</body>
 </html>
