デフォルトのテーマのデザインを調整中。

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -30,10 +30,10 @@
 ?>
 	</head>
 	<body>
-		<div class="theme_outline" id="page_top">
-			<header>
-				<div class="theme_logo"><a href="<?php print t::h( $px->theme()->href('') ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
-			</header>
+		<header id="page_top">
+			<div class="theme_logo"><a href="<?php print t::h( $px->theme()->href('') ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
+		</header>
+		<div class="theme_outline">
 			<div class="theme_middle">
 				<div class="theme_column1">
 					<div class="theme_column1-header">
@@ -94,15 +94,21 @@
 
 				</div><!-- /.theme_column2 -->
 			</div><!-- /.theme_middle -->
-			<footer>
-				<div class="theme_foot_back2top"><a href="#page_top" class="up">ページの先頭へ戻る</a></div>
-				<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
-				<div class="theme_foot_menu">
-					<ul>
-						<li><?php print $px->theme()->mk_link(''); ?></li>
-					</ul>
-				</div>
-			</footer>
 		</div><!-- /.theme_outline -->
+		<div class="theme_foot_back2top"><a href="#page_top" class="up">ページの先頭へ戻る</a></div>
+		<footer><div class="theme_footer_inner">
+			<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
+			<div class="theme_foot_menu">
+				<ul>
+					<li><?php print $px->theme()->mk_link('', array('current'=>empty($page_info['id']))); ?></li>
+<?php
+	$global_menu = $px->site()->get_global_menu();
+	foreach( $global_menu as $pid ){
+		?><li><?php print $px->theme()->mk_link($pid); ?></li><?php
+	}
+?>
+				</ul>
+			</div>
+		</div></footer>
 	</body>
 </html>
