_docs を docs に名称変更

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,14 +10,14 @@
 	Pickles Framework 標準のコーディング規則およびドキュメントモジュール定義は、次のページを参照してください。<br />
 </p>
 <ul>
-	<li><a href="./_docs/modules/">ドキュメントモジュール</a></li>
+	<li><a href="docs/modules/">ドキュメントモジュール</a></li>
 </ul>
 
 <p>
 	これらのドキュメントは、次のファイルに記述されています。コーディング規則やCSS実装の確認用として利用できますが、不要な場合削除しても大丈夫です。<br />
 </p>
 <ul>
-	<li>./_docs/*</li>
+	<li>./docs/*</li>
 	<li>./_PX/sitemaps/_docs.csv</li>
 </ul>
 
