--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,6 +4,7 @@
 	<p>このメッセージが表示されているということは、インストールが正常に完了していない可能性があります。</p>
 	<p>次の点を確認してください。</p>
 	<ul>
+		<li>index.html ファイルを直接ウェブブラウザで開いているかもしれません。ウェブサーバー Apache を経由して表示してください。</li>
 		<li>.htaccess の設定が反映されていない可能性があります。Apache の設定で <code>AllowOverride All</code> などとして、設定の上書きを許可してください。</li>
 		<li>Apache モジュールの mod_rewrite が利用できない可能性があります。有効になるように設定する、またはモジュールのインストールを行ってください。</li>
 	</ul>
