--- a/htdocs/_PX/themes/default/plain.html
+++ b/htdocs/_PX/themes/default/plain.html
@@ -12,6 +12,7 @@
 		<title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 		<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
 		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
+		<meta name="viewport" content="width=device-width" />
 		<script src="<?php print t::h($px->theme()->href('/common/js/jquery-1.10.1.min.js')); ?>" type="text/javascript"></script>
 <?php
 	print $px->ssi($px->theme()->href('/common/inc/common_setup.inc'));
