--- a/htdocs/_PX/themes/default/top.html
+++ b/htdocs/_PX/themes/default/top.html
@@ -8,10 +8,11 @@
 	$colors = $obj_funcs->get_color_scheme();
 	$test_results = $obj_funcs->setup_test();
 	$messageBoxSetting = array();
-	$messageBoxSetting['main'] = '#ff9933';
-	$messageBoxSetting['bg'] = '#fff5f0';
+	$messageBoxSetting['main'] = $colors['main'];
+	$messageBoxSetting['bg'] = '#fff';
 	$messageBoxSetting['radius'] = '1em';
 	if( count($test_results) ){
+		// エラーが検出された場合
 		$messageBoxSetting['main'] = '#ff0000';
 		$messageBoxSetting['bg'] = '#ffeeee';
 		$messageBoxSetting['radius'] = '0px';
@@ -36,35 +37,42 @@
 		<link rel="stylesheet" href="<?php print t::h($px->path_theme_files('/css/common.css')); ?>" type="text/css" />
 		<style type="text/css">
 			.theme_welcome{
-				background:#fff url('data:image/svg+xml;base64,<?php print base64_encode(file_get_contents( $px->realpath_theme_files('img/welcome.svg') )); ?>') center center no-repeat;
+				background:#fff;
 				min-height:300px;
-				text-align: left;
-				padding:10px 2em;
+				text-align: center;
+				padding:20px 1em 0;
 			}
 			.theme_welcome .theme_welcome-inner{
 				width:auto;
 				max-width:900px;
 				margin:0 auto;
-				padding:1.5em 0;
+				padding:0;
+			}
+			.theme_welcome .theme_welcome-title{
+				color: <?php print t::h($colors['link']); ?>;
+				font-weight:bold;
+				font-size:xx-large;
+				margin:1em 0 0.5em 0;
 			}
 			.theme_welcome .theme_welcome-message{
-				border:4px solid <?php print $messageBoxSetting['main']; ?>;
 				color: <?php print $messageBoxSetting['main']; ?>;
+				border:2px solid <?php print $messageBoxSetting['main']; ?>;
 				background-color: <?php print $messageBoxSetting['bg']; ?>;
 				border-radius: <?php print $messageBoxSetting['radius']; ?>;
-				padding:1em 1.5em;
-				margin-right:auto;
-				max-width:400px;
+				padding:0.5em 1em;
+				max-width:680px;
+				margin:0 auto 10px auto;
 			}
 			.theme_welcome .theme_welcome-message *{
 				margin-top:0;
 				margin-bottom:0;
 			}
-			.theme_welcome .theme_welcome-title{
-				color:<?php print t::h($colors['link']); ?>;
-				font-weight:bold;
-				font-size:xx-large;
-				margin:1em 0 0.5em 0;
+			.theme_welcome .theme_welcome-message ul{
+				text-align:left;
+				word-break:break-all;
+			}
+			.theme_welcome .theme_welcome-image_everyone{
+				text-align:center;
 			}
 		</style>
 <?php
@@ -79,9 +87,14 @@
 		</header>
 		<div class="theme_welcome">
 			<div class="theme_welcome-inner">
-				<p class="theme_welcome-title"><?php print t::h($px->get_conf('project.name')); ?> へようこそ！</p>
-				<div class="theme_welcome-message">
-					<?php print $obj_funcs->mk_setup_test( $test_results ); ?>
+				<p class="theme_welcome-title"><?php print $obj_funcs->create_src_welcome_svg(); ?></p>
+				<div class="theme_welcome-body clearfix">
+					<div class="theme_welcome-message">
+						<?php print $obj_funcs->mk_setup_test( $test_results ); ?>
+					</div>
+					<?php if( !count($test_results) ){ ?>
+						<div class="theme_welcome-image_everyone"><img src="<?php print $px->path_theme_files('img/everyone.png'); ?>" alt="" /></div>
+					<?php } ?>
 				</div>
 			</div>
 		</div>
